--- a/app/assets/css/custom-style.css
+++ b/app/assets/css/custom-style.css
@@ -514,3 +514,15 @@ div.datepicker.datepicker-dropdown.dropdown-menu.datepicker-orient-left.datepick
     height: 5px;
     border-radius: 0px;
 }
+
+
+/* Estilos específicos para el iframe */
+.project-map-iframe {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    border: 0;
+    background-color: transparent;
+}
